--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,19 +1,36 @@
 .loginRoot {
-    left: 0px;
-    top: -20%;
-    right: 0px;
-    bottom: 0px;
     margin: auto;
-    position: fixed;
+    margin-top: 5%;
     width: 400px;
     height: 300px;
     max-height: 300px;
-    border: solid 2px #005ce6;
     text-align: center;
     background-color: #ffffff;
     border-radius: 5px;
+    opacity: 0.1;
+    box-shadow: 0px 0px 10px #000000;
+    animation: myShow 1s;
+    animation-fill-mode: forwards;
 }
 
+
+@keyframes myShow {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 0.9;
+    }
+}
+
+@keyframes myHide {
+    from {
+        opacity: 0.9;
+    }
+    to {
+        opacity: 0.05;
+    }
+}
 .loginRoot label {
     display: inline-block;
 }
@@ -59,7 +76,7 @@
 }
 
 .loginRoot h1 {
-    margin: 5%;
+    padding: 5%;
     color: #005ce6;
 }
 
@@ -70,6 +87,18 @@
     line-height: 20px;
     text-align: left;
     user-select: none;
+}
+
+.loginRoot .logintip input {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-bottom: 3px;
+}
+
+.loginRoot .logintip span {
+    margin-left: 0.3em;
 }
 
 .loginRoot .logintip:first-child {
