--- a/src/css/registered.css
+++ b/src/css/registered.css
@@ -1,28 +1,45 @@
-.registeredRoot{
-    left: 0px;
-    top: -20%;
-    right: 0px;
-    bottom: 0px;
+.registeredRoot {
     margin: auto;
-    position: fixed;
+    margin-top: 5%;
     width: 400px;
     height: 300px;
     max-height: 300px;
-    border: solid 2px #ffae00;
     text-align: center;
     background-color: #ffffff;
     border-radius: 5px;
+    opacity: 0.1;
+    box-shadow: 0px 0px 10px #000000;
+    animation: myShow 1s;
+    animation-fill-mode: forwards;
 }
 
+@keyframes myShow {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 0.9;
+    }
+}
+
+@keyframes myHide {
+    from {
+        opacity: 0.9;
+    }
+    to {
+        opacity: 0.05;
+    }
+}
 
 .registeredRoot h1 {
-    margin: 5%;
+    padding: 5%;
     color: #ffae00;
 }
 
 .registeredRoot label {
     display: inline-block;
 }
+
 .registeredRoot .inputText {
     height: 30px;
     position: relative;
@@ -35,6 +52,7 @@
 }
 
 .registeredRoot .loginBtn {
+    margin-top: 3%;
     width: 100px;
     height: 40px;
     font-size: 20px;
@@ -54,7 +72,6 @@
     background-color: #e7a412;
 }
 
-
 .registeredRoot .logintip {
     display: inline-block;
     width: 100%;
@@ -64,7 +81,6 @@
     user-select: none;
     color: red;
 }
-
 
 .registeredRoot .link {
     text-decoration: none;
