--- a/src/css/rpgGame.css
+++ b/src/css/rpgGame.css
@@ -1,3 +1,11 @@
 .gameRoot{
+    position: relative;
     text-align: center;
+    width: 1280px;
+    height: 720px;
+    margin: auto;
+    margin-top: 1%;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0px 0px 10px #3a3434;
 }
