--- a/src/css/rpgGame.css
+++ b/src/css/rpgGame.css
@@ -9,3 +9,22 @@
     background-color: white;
     box-shadow: 0px 0px 10px #3a3434;
 }
+
+
+.scroll{
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    width: 6px;
+    height: 99%;
+    background-color: rgb(0, 0, 0);
+    border-radius: 3px;
+}
+
+.scrollbar{
+    position: absolute;
+    right: 0px;
+    width: 6px;
+    border-radius: 3px;
+    background-color: white;
+}
