--- a/src/css/rpgGame.css
+++ b/src/css/rpgGame.css
@@ -5,9 +5,11 @@
     height: 720px;
     margin: auto;
     margin-top: 1%;
+    margin-bottom: 1%;
     border-radius: 5px;
     background-color: white;
     box-shadow: 0px 0px 10px #3a3434;
+    overflow: hidden;
 }
 
 
