--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body{
     background-color: #0066ff;
     text-align: center;
+    min-width: 1300px;
 }
 
 .titleLogo{
@@ -108,5 +109,49 @@ body{
     100% {
         color: red;
         top: 0px;
+    }
+}
+
+@keyframes show {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+@keyframes hide {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
+}
+
+@keyframes menushow {
+    from{
+        position: relative;
+        opacity: 0;
+        bottom: -100px;
+    }
+    to{
+        position: relative;
+        opacity: 1;
+        bottom: 0px;
+    }
+}
+
+@keyframes menuhide {
+    from{
+        position: relative;
+        opacity: 1;
+        bottom: 0px;
+    }
+    to{
+        position: relative;
+        opacity: 0;
+        bottom: -100px;
     }
 }
