--- a/src/css/gameAppCss/gameMenu.module.css
+++ b/src/css/gameAppCss/gameMenu.module.css
@@ -1,7 +1,6 @@
 .back{
     width: 60%;
     height: 10%;
-    border-radius: 5px;
     position: absolute;
     right: 1%;
     bottom: 1%;
@@ -13,6 +12,7 @@
     list-style-type: none;
     float: right;
     width: 10%;
+    cursor: pointer;
 }
 
 .btnimg{
@@ -20,6 +20,7 @@
     cursor: pointer;
     width: 50%;
     transition: width 0.1s, transform 0.5s, box-shadow 0.5s;
+    pointer-events:none;
 }
 
 .btnp{
@@ -30,7 +31,7 @@
 .back li:hover .btnimg{
     box-shadow: 0px 0px 5px rgb(255, 255, 255);
     width: 55%;
-    transform:rotate(90deg)
+    transform:rotate(90deg);
 }
 
 .back li:hover .btnp{
