--- a/src/css/gameAppCss/gamePack.module.css
+++ b/src/css/gameAppCss/gamePack.module.css
@@ -1,3 +1,30 @@
 .back{
-    
+    background-color: rgb(33, 78, 201);
+    border-radius: 5px;
+    width: 30%;
+    height: 75%;
+    position: absolute;
+    right: 10%;
+    bottom: 15%;
+}
+
+.hideBtn{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 30px;
+    height: 30px;
+    background-image: url("./img/closeBtn.png");
+    background-size: cover;
+    transition: transform 0.1s;
+    cursor: pointer;
+}
+
+.hideBtn:hover{
+    border-radius: 50%;
+    transform: rotate(90deg);
+}
+
+.hideBtn:active{
+    background-color: rgba(0, 17, 255, 0.507);
 }
