--- a/src/css/gameAppCss/gamePlayerList.module.css
+++ b/src/css/gameAppCss/gamePlayerList.module.css
@@ -8,7 +8,7 @@
     width: 400px;
     height: 550px;
     border-radius: 5px;
-    background-color: rgb(41, 79, 245);
+    background-color: #0066FF;
     user-select: none;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -17,7 +17,7 @@
     width: 380px;
     height: 100%;
     border-radius: 5px;
-    background-color: rgb(12, 120, 192);
+    background-color: #00C3FF;
     overflow-y: auto;
 }
 
@@ -37,7 +37,7 @@
 .back li {
     width: 340px;
     height: 10%;
-    background-color: rgb(15, 142, 192);
+    background-color: #0066FF;
     border-radius: 5px;
     margin: auto;
     margin: 3%;
@@ -50,10 +50,10 @@
 
 .back li:hover {
     color: rgb(167, 165, 165);
-    background-color: rgb(66, 27, 156);
+    background-color: #1b64d3;
 }
 .back li:active {
-    background-color: rgb(109, 19, 255);
+    background-color: #00c3ff;
 }
 
 
@@ -77,7 +77,7 @@
 
 .level {
     width: 40%;
-    color: #0db9ab;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -88,17 +88,18 @@
     width: 90%;
     height: 7%;
     border-radius: 5px;
-    background-color: rgb(55, 10, 216);
+    background-color: #00C3FF;
     cursor: pointer;
     margin: 1%;
+    transition: background-color 0.1s;
 }
 
 .menu:hover {
-    background-color: rgb(64, 39, 156);
+    background-color: #b6b2b2
 }
 
 .menu:active {
-    background-color: rgb(55, 10, 216);
+    background-color: #ffffff;
 }
 
 .menu span {
@@ -113,6 +114,7 @@
     margin: auto;
     font-size: 22px;
     text-align: center;
+    color: #0066FF;
 }
 
 .tip {
