--- a/src/css/gameAppCss/gameAttribute.module.css
+++ b/src/css/gameAppCss/gameAttribute.module.css
@@ -28,3 +28,33 @@
 .hideBtn:active{
     background-color: rgba(0, 17, 255, 0.507);
 }
+
+.contextback{
+    width: 100%;
+    height: 100%;
+}
+.contextback p{
+    font-size: 30px;
+    color: white;
+}
+
+.context{
+    width: 100%;
+    height: 90%;
+}
+
+.context p{
+    text-align: left;
+    padding: 0.5em;
+    padding-left: 1em;
+    font-size: 20px;
+    color: white;
+}
+
+.context p:first-child{
+    text-align: center;
+}
+.context p span{
+    display: inline-block;
+    width: 50%;
+}
