--- a/src/css/gameAppCss/gamePack.module.css
+++ b/src/css/gameAppCss/gamePack.module.css
@@ -28,3 +28,35 @@
 .hideBtn:active{
     background-color: rgba(0, 17, 255, 0.507);
 }
+
+.contextback{
+    width: 100%;
+    height: 100%;
+}
+
+.contextback p{
+    font-size: 30px;
+    color: white;
+}
+.context{
+    width: 100%;
+    height: 90%;
+}
+
+.packul{
+    margin-top: 5%;
+    text-align: left;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    list-style-type: none;
+}
+
+.lis{
+    display: inline-block;
+    width: 14%;
+    height: 10%;
+    background-color: white;
+    margin: 3%;
+    border-radius: 5px;
+}
