--- a/src/css/gameAppCss/gameSet.module.css
+++ b/src/css/gameAppCss/gameSet.module.css
@@ -28,3 +28,45 @@
 .hideBtn:active{
     background-color: rgba(0, 17, 255, 0.507);
 }
+
+.setContext{
+    width: 80%;
+    height: 100%;
+    margin: auto;
+}
+
+.setContext p{
+    font-size: 30px;
+    color: white;
+}
+
+.setBtn{
+    width: 50%;
+    height: 80%;
+    margin: auto;
+    position: relative;
+}
+
+.setBtn input{
+    width: 100%;
+    height: 10%;
+    margin: auto;
+    background-color: #26a0c5;
+    border: solid 0px #000;
+    border-radius: 5px;
+    outline: none;
+    color: white;
+    margin-top: 5%;
+}
+
+.setBtn input:hover{
+    background-color: #00C3FF;
+}
+
+.setBtn input:active{
+    background-color: #2b9bbd;
+}
+
+.setBtn input:first-child{
+    margin-top: 50%;
+}
