--- a/src/css/login.css
+++ b/src/css/login.css
@@ -11,6 +11,7 @@
     box-shadow: 0px 0px 10px #000000;
     animation: myShow 1s;
     animation-fill-mode: forwards;
+    overflow: hidden;
 }
 
 
