--- a/src/css/gameAppCss/gamePack.module.css
+++ b/src/css/gameAppCss/gamePack.module.css
@@ -45,7 +45,7 @@
 
 .packul{
     margin-top: 5%;
-    text-align: left;
+    text-align: center;
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -54,9 +54,10 @@
 
 .lis{
     display: inline-block;
-    width: 14%;
-    height: 10%;
-    background-color: white;
-    margin: 3%;
+    width: 15%;
+    height: 11%;
+    background-color: rgba(0, 132, 255, 0.507);
+    margin: 2%;
+    border: solid 1% rgba(0, 17, 255, 0.507);
     border-radius: 5px;
 }
