--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #0066ff;
+    background-color: #00A1FE;
     text-align: center;
     min-width: 1300px;
 }
@@ -39,7 +39,7 @@ body {
         background-color: #ffffff;
     }
     to {
-        background-color: #0066ff;
+        background-color: #00A1FE;
     }
 }
 
@@ -54,7 +54,7 @@ body {
 
 @keyframes bluewhiteHome {
     from {
-        background-color: #0066ff;
+        background-color: #00A1FE;
     }
     to {
         background-color: #ffffff;
